# Project-U

./: .env.sample  .gitignore  ARCHITECTURE_INVARIANTS.md  CLAUDE.md  Makefile  docker-compose.yml
.harness/ouroboros/evaluations/: eval-v1-2026-04-24.yaml
.harness/ouroboros/interviews/: 2026-04-24-00-00.yaml
.harness/ouroboros/seeds/: seed-v1.yaml
pu-app/: Dockerfile  pyproject.toml
pu-app/app/: main.py
pu-ui/: Dockerfile  package-lock.json  package.json
pu-ui/src/app/: layout.tsx  page.tsx
